add scripts floder